added learning goals

--- a/blenderKubus.html
+++ b/blenderKubus.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="container">
-<h2>Unity video Iron Man</h2>
+<h2>Blender kubus camera animatie</h2>
             <p>hier ben ik aan de slag gegaan met 
             </p><br>
             <p>dit hoort bij deze learning goal</p><br>
