--- a/conclusieStoryboarding copy.html
+++ b/conclusieStoryboarding copy.html
@@ -19,10 +19,10 @@
             </div>
         </div>
         <div class="container">
-            <h2>Conclusie storyboarding</h2>
+            <h2>Conclusie storyboarding</h2><br>
             <p>Hier heb ik mijn conclusie op de eerste deelvraag: Is frameforge geschikt om 3D scenes te storyboarden?
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>dit hoort bij deze learning goal: <i>Advise</i></p><br>
             <iframe src="./files/conclusieStoryboarden.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
