--- a/ironManScene.html
+++ b/ironManScene.html
@@ -19,10 +19,10 @@
             </div>
         </div>
         <div class="container">
-<h2>Unity video Iron Man</h2>
-            <p>hier ben ik aan de slag gegaan met 
+<h2>Unity video Iron Man</h2><br>
+            <p>Hier ben ik aan de slag gegaan met het creeeren van een animatie in Unity.
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>Dit hoort bij deze learning goal: <i>Design</i></p><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/IilB4wV7eoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             </section>
