--- a/watIsVolumetricVideo.html
+++ b/watIsVolumetricVideo.html
@@ -19,11 +19,11 @@
             </div>
         </div>
         <div class="container">
-            <h2>Wat is volumetric video onderzoek</h2>
-            <p>Ik heb hier bieb onderzoek verricht in de vorm van literature study, omdat ik meer wilde weten over volumetric door online op zoek te gaan naar informatie.
+            <h2>Wat is volumetric video onderzoek</h2><br>
+            <p>Ik heb hier bieb onderzoek verricht in de vorm van <i>literature study</i>, omdat ik meer wilde weten over volumetric door online op zoek te gaan naar informatie.
                 ik heb gekeken naar de geschiedenis van volumetric video en hoe het idee tot stand is gekomen.  
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>dit hoort bij deze learning goal: <i>knowledge & insight</i></p><br>
             <iframe src="./files/wat is volumetric video.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
