--- a/blenderanimatie.html
+++ b/blenderanimatie.html
@@ -19,10 +19,11 @@
             </div>
         </div>
         <div class="container">
-<h2>Unity video Iron Man</h2>
-            <p>hier ben ik aan de slag gegaan met 
+<h2>Unity video Iron Man</h2><br>
+            <p>Hier ben ik aan de slag gegaan met Blender en dit is een volgende iteratie op de kubus video. Ik doe nu in feite hetzelfde, 
+                alleen maak ik nu gebruik van een alembic en laat ik tijdens de animatie de camera op verschillende plekken focussen. 
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>Dit hoort bij deze learning goal: <i>Design en knowledge & insight</i></p><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VJM-1kHuF7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             </section>
