--- a/conclusieStoryboarding.html
+++ b/conclusieStoryboarding.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="container">
-            <h2>Conclusie storyboarding</h2>
+            <h2>Conclusie storyboarding</h2><br>
             <p>Hier heb ik mijn conclusie op de eerste deelvraag: Is frameforge geschikt om 3D scenes te storyboarden?
             </p><br>
             <p>dit hoort bij deze learning goal</p><br>
