--- a/interviewGertJan.html
+++ b/interviewGertJan.html
@@ -19,11 +19,11 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Gert-Jan Booy</h2>
+            <h2>interview Gert-Jan Booy</h2><br>
             <p>Gert-Jan Booy is de regisseur van het programma Gamekeepers en die heb ik een aantal vragen over 
                 de mail gesteld hoe hij te werk ging met storyboarden.
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>dit hoort bij deze learning goal <i>knowledge & insights.</i></p><br>
             <iframe src="./files/interviewGertjan.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
