--- a/isFrameForgeGeschikt.html
+++ b/isFrameForgeGeschikt.html
@@ -19,9 +19,12 @@
             </div>
         </div>
         <div class="container">
-            <h2>Is frameForge geschikt om 3D-Scenes te storyboarden?</h2>
-            <p>ik heb deze cmd methods gebruikt nog even opschrijven</p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <h2>Is frameForge geschikt om 3D-Scenes te storyboarden?</h2><br>
+            <p>ik heb de eerste deelvraag onderzocht door een uitgebreid onderzoek te doen naar storyboarden. Ik heb hierin gekeken naar verschillende andere 
+                storyboarding programma's doormiddel van <i>benchmark creation</i>. Daarna heb ik een interview gehouden met Gert-Jan Booy (regisseur) en heb ik 
+                hem gevraagd welk programma hij gebruikt, en wat hij vind dat een goed programma aan opties moet bevatten<i>(veld onderzoek, interview)</i>.
+            </p><br>
+            <p>dit hoort bij deze learning goal <i>knowledge & insight</i></p><br>
             <iframe src="./files/is frameforge geschikt.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
