--- a/unityBospad.html
+++ b/unityBospad.html
@@ -19,11 +19,11 @@
             </div>
         </div>
         <div class="container">
-<h2>Foto Unity bospad</h2>
-            <p>hier ben ik aan de slag gegan met mezelf bekend te maken met unity D.M.V een POC waarin ik geleerd heb om assets toe te voegen in Unity en deze 
+<h2>Foto Unity bospad</h2><br>
+            <p>Hier ben ik aan de slag gegan met mezelf bekend te maken met unity D.M.V een POC waarin ik geleerd heb om assets toe te voegen in Unity en deze 
                 te gebruiken.
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>Dit hoort bij deze learning goal: <i>Design en Knowledge & insight</i></p><br>
             <img src="IMG/unityBospad.png" width="100%" alt="">
             </div>
             </section>
