--- a/waaromIsVolumetricBeter.html
+++ b/waaromIsVolumetricBeter.html
@@ -19,9 +19,12 @@
             </div>
         </div>
         <div class="container">
-            <h2>Waarom is volumetric video beter dan regulier CGI?</h2>
-            <p>ik heb deze cmd methods gebruikt nog even opschrijven</p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <h2>Waarom is volumetric video beter dan regulier CGI?</h2><br>
+            <p>Ik heb van een extern persoon de vraag gekregen waarom volumetric video nou beter zou zijn, omdat hij niet onder de indruk was van sommige 
+                resultaten. Daar heb ik bieb onderzoek naar gedaan in de vorm van <i>literature study</i> en ondervonden dat het in 2 aspecten vooral een voorsprong heeft op regulier CGI. 
+                Ook heb ik onderocht hoe je de soms onderwelmende resulaten toch tot een mooi beeld kunt krijgen. 
+            </p><br>
+            <p>dit hoort bij deze learning goal <i>knowledge & insight</i></p><br>
             <iframe src="./files/waarom is volumetric video beter.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
