--- a/blenderKubus.html
+++ b/blenderKubus.html
@@ -20,7 +20,9 @@
         </div>
         <div class="container">
 <h2>Blender kubus camera animatie</h2>
-            <p>hier ben ik aan de slag gegaan met 
+            <p>hier ben ik aan de slag gegaan met een animatie van een camera in blender. Ik heb een 'bezier curve' gemaakt 
+                als een pad wat de camera moet gaan volgen. Ik heb een constraint toegevoegd genaamd 'follow path' deze zorgd ervoor 
+                dat de camera het pad volgt wat ik heb gemaakt.
             </p><br>
             <p>dit hoort bij deze learning goal</p><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ew1M6gScPlc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
