extra informatie toegeveogd

--- a/blenderKubus.html
+++ b/blenderKubus.html
@@ -24,7 +24,7 @@
                 als een pad wat de camera moet gaan volgen. Ik heb een constraint toegevoegd genaamd 'follow path' deze zorgd ervoor 
                 dat de camera het pad volgt wat ik heb gemaakt.
             </p><br>
-            <p>dit hoort bij deze learning goal</p><br>
+            <p>dit hoort bij deze learning goal <i>design</i></p><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ew1M6gScPlc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             </section>
