--- a/blenderanimatie.html
+++ b/blenderanimatie.html
@@ -19,9 +19,12 @@
             </div>
         </div>
         <div class="container">
-<h2>Unity video Iron Man</h2><br>
+        <h2>Blender volumetric dans camera animatie</h2><br>
             <p>Hier ben ik aan de slag gegaan met Blender en dit is een volgende iteratie op de kubus video. Ik doe nu in feite hetzelfde, 
-                alleen maak ik nu gebruik van een alembic en laat ik tijdens de animatie de camera op verschillende plekken focussen. 
+                alleen maak ik nu gebruik van een alembic en laat ik tijdens de animatie de camera op verschillende plekken focussen. Net zoals bij 
+                de kubus video heb ik een pad gemaakt die de camera moet volgen, alleen nu heb ik ook nog om focus te houden op de persoon een contraint
+                genaamd: 'track to' gebruikt, ik heb een 'empty cube' gemaakt waar ik de camera op laten focussen zo heb ik volledige controle over waar de
+                camera naar kijkt. 
             </p><br>
             <p>Dit hoort bij deze learning goal: <i>Design en knowledge & insight</i></p><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VJM-1kHuF7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
