--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                     geweest met een regisseur van studio100 die het project gamekeepers onder zich had. Hij maakte gebruik van een programma genaamd shot designer, ik heb dit programma
                     onderzocht en geconcludeerd dat dit voor een volumetric opname niet erg verhelderend is. En dan vooral de acteurs en het techniekteam. Ik heb ook nog verschillende andere
                     programma's opgezocht en een aantal getest en ben tot de conclusie gekomen dat FrameForge het best geschikt is als storyboarding software voor gebruik in de volumetric 
-                    studio. Verder heb ik veel onderzoek gedaan naar wat volumetric video nou precies is en hoe het is ontstaan <a href="#">document</a>.
+                    studio. Verder heb ik veel onderzoek gedaan naar wat volumetric video nou precies is en hoe het is ontstaan <a href="#">document</a>. Daarnaast heb ik de vraag gekregen 
+                    om te vergelijken waarom volumetric nou beter is als regulier CGI. Ik heb als test een storyboard gemaakt van een scene uit de matrix, waar ik rekening heb gehouden met 
+                    het voorgaanda onderzoek over hoe je moet storyboarden in het algemeen
                 </p><br>
                 
             </div>
