--- a/index.html
+++ b/index.html
@@ -69,18 +69,23 @@
         <div class="fase1location">
             <div class="containerBlue">
                 <h2>De opdracht</h2><br>
-                <p>Dutch rose Media en 4DR Studios willen toetreden tot de markt film en televisie, hiervoor hebben ze een partner genaamd 'Studio100' waar ze een pilot mee opgenomen hebben
+                <p>Dutch Rose Media is een bedrijf dat wilt de wereld om ons heen mooier, leuker en begrijpelijker maken.
+                    Dat doen ze met goed doordachte concepten waarin augmented reality een belangrijke rol speelt. Studio
+                    100 probeert om met AR/VR CGI film shots makkelijker en een stuk goedkoper te maken. Studio100
+                    zijn missie is om niet alleen content te maken die entertainend is voor kinderen maar ook nog leerzaam.
+                    Dutch rose Media en 4DR Studios willen toetreden tot de markt film en televisie hiervoor hebben ze met Studio100 een pilot opgenomen
                     om te kijken of volumetric te gebruiken is bij het maken van 'onmogelijke actie shots'. Aan mij is de opdracht gegeven om uit te zoeken of dat deze technologie voor 
-                    deze specifieke markt een betere keus is dan regulier motion capture en om uit te zoeken welke software hiervoor het best gebruikt kan worden in verschillende stadia van de 
+                    deze specifieke markt een betere keus is dan regulier motion capture en om uit te zoeken welke software/toepassingen hiervoor het best gebruikt kunnen worden in verschillende stadia van de 
                     productie, zowel de pre productie(storyboarding) als de post productie. 
                 </p><br>
+                <b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en telivise?</b><br><br>
                 <h2>Fase 1</h2><br>
                 <p>Allereerst heb ik mezelf bekend gemaakt binnen Dutch Rose Media en de werknemers. Ik heb een rondleiding gehad
                     in het gebouw en heb mezelf voorgesteld aan mijn collega's en mede stagiaires. Daarna ben ik aan de slag gegaan
                     met het maken van mijn <a href="#">Projectplan</a>. De feedback hierop was dat ik gebruik moest maken van korte 
                     sprints zodat ik feedback kon verwerken. <br>
-                    Daarna ben ik aan de slag gegaan met de eerste fase zoals die in mijn projectplan beschreven stond. In deze fase
-                    heb ik me vooral bezig gehouden met storyboarding. Ik had hiervoor de volgende deelvragen:<br><br>
+                    Daarna ben ik aan de slag gegaan met de eerste fase zoals die in mijn projectplan beschreven stond. Deze fase stond in het teken van pre productie. 
+                    Ik had hiervoor de volgende deelvragen:<br><br>
                     <ul>
                         <li>Welke 3D software zijn er om volumetric video te bewerken?</li>
                         <li>Is FrameForge geschikt om 3D-scenes te storyboarden?</li>
@@ -136,23 +141,23 @@
                 <h2>Learning goals</h2><br>
                 
                 <p><b>Analise</b></p><br>
-                <a href="./watIsVolumetricVideo.html"><p>Wat is volumetric video?</p></a>
-                <a href="./waaromIsVolumetricBeter.html"><p>waarom is volumetric video beter dan regulier CGI?</p></a>
-                <a href="./isFrameForgeGeschikt.html"><p>is frameforge geschikt om 3D scenes te storyboarden?</p></a>
-                <a href="./interviewGuy.html"><p>interview met Guy Meel over Gamekeepers scene</p></a>
-                <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
+                 <a href="./watIsVolumetricVideo.html"><p>Wat is volumetric video?</p></a>
+                 <a href="./waaromIsVolumetricBeter.html"><p>waarom is volumetric video beter dan regulier CGI?</p></a>
+                 <a href="./isFrameForgeGeschikt.html"><p>is frameforge geschikt om 3D scenes te storyboarden?</p></a>
+                 <a href="./interviewGuy.html"><p>interview met Guy Meel over Gamekeepers scene</p></a>
+                 <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
                 <p>Opdracht omschrijving?</p>
-                <p>welke software is het meest geschikt om beelden te creeeren met volumetric video?</p><br>
+                 <p>welke software is het meest geschikt om beelden te creeeren met volumetric video?</p><br>
 
                 <p><b>Advies</b></p><br>
-                <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
-                <a href="./conclusiePostproductie.html"><p>conclusie beste software post productie...</p></a><br>
+                  <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
+                 <a href="./conclusiePostproductie.html"><p>conclusie beste software post productie...</p></a><br>
 
                 <p><b>Design</b></p><br>
-                <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
-                <a href="./ironManScene.html"><p>unity flying animation</p></a>
-                <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
-                <a href="blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a><br>
+                 <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
+                 <a href="./ironManScene.html"><p>unity flying animation</p></a>
+                 <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
+                 <a href="blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a><br>
 
                 <p><b>Realisatie</b></p><br>
 
