--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <div class="containerBlue">
         <h2 id="leeswijzerTitel">Intro</h2><br>
         <p>Ik ben Mike van Tienoven 3e jaars media student op Fontys Hogeschool. In dit 
-            portfolio laat ik zien welke werkzaamheden ik heb verricht voor Dutch Rose Media.
-            De leeswijzer zal een beknopt overzicht zijn van alle leerdoelen, verder zal alles 
+            portfolio laat ik zien welke producten/Proof of Concepts ik heb gemaakt voor mijn stage om mijn onderzoeksvragen
+            te beantwoorden in opdracht van Dutch Rose Media.
+            De leeswijzer zal een beknopte process bewchrijving zijn die ik heb opgedeeld in Fases, verder zal alles 
             gelinkt zijn aan de desbetreffende producten.</p><br>
         <h2>Leeswijzer</h2><br>
         <p>Dit portfolio bestaat uit 3 Fases. In fase 1 heb ik me gefocust op de preproductie en heb ik me
@@ -60,7 +61,7 @@
         Natasja Paulssen is hiervan de Creative Director tegelijkertijd is Natasja ook de CEO van 4dr Studios.
          Dit bedrijf heeft een volumetric studio, dit is een green screen studio met een kooi van camera’s
           die een performance van een acteur om kan zetten in volumetric video. Het resultaat zijn 3D hologrammen, 
-          beelden die je van alle kanten kunt bekijken en omheen kunt lopen. 
+          beelden die je van alle kanten kunt bekijken en omheen kunt lopen. Chronosfere dingen over vertellen even vragen
         </div>
     </section>
 
@@ -70,20 +71,26 @@
             <div class="containerBlue">
                 <h2>De opdracht</h2><br>
                 <p>Dutch Rose Media is een bedrijf dat wilt de wereld om ons heen mooier, leuker en begrijpelijker maken.
-                    Dat doen ze met goed doordachte concepten waarin augmented reality een belangrijke rol speelt. Studio
-                    100 probeert om met AR/VR CGI film shots makkelijker en een stuk goedkoper te maken. Studio100
+                    Dat doen ze met goed doordachte concepten waarin augmented reality een belangrijke rol speelt. 4DR Studios
+                    wilt proberen om met augmented reality million dollar shots(he;e dure cgi shots) een stuk makkeijker en goekoper maken. 
+                    Zo zou je achterdaf de camera angles makkelijk nog kunnen veranderen zonder dat hier veel extra kosten an
+                    verbonden zitten, als deze techniek verder ontwikkeld word zou dit een hele grote stap in CGI kunnen worden en zou de filmwereld 
+                    hier van kunnen profiteren, niet alleen 'big budget blockbusters', maar ook zeker indie filmmakers zoals Studio100. Studio100
                     zijn missie is om niet alleen content te maken die entertainend is voor kinderen maar ook nog leerzaam.
                     Dutch rose Media en 4DR Studios willen toetreden tot de markt film en televisie hiervoor hebben ze met Studio100 een pilot opgenomen
                     om te kijken of volumetric te gebruiken is bij het maken van 'onmogelijke actie shots'. Aan mij is de opdracht gegeven om uit te zoeken of dat deze technologie voor 
                     deze specifieke markt een betere keus is dan regulier motion capture en om uit te zoeken welke software/toepassingen hiervoor het best gebruikt kunnen worden in verschillende stadia van de 
                     productie, zowel de pre productie(storyboarding) als de post productie. 
                 </p><br>
-                <b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en telivise?</b><br><br>
+                <b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televise?</b><br><br>
                 <h2>Fase 1</h2><br>
                 <p>Allereerst heb ik mezelf bekend gemaakt binnen Dutch Rose Media en de werknemers. Ik heb een rondleiding gehad
                     in het gebouw en heb mezelf voorgesteld aan mijn collega's en mede stagiaires. Daarna ben ik aan de slag gegaan
                     met het maken van mijn <a href="#">Projectplan</a>. De feedback hierop was dat ik gebruik moest maken van korte 
                     sprints zodat ik feedback kon verwerken. <br>
+                    Ik wist voordat ik aan mijn stage begon eigenlijk vrijwel niets over het onderwerp dus heb ik allereerst veel <a href="#">onderzoek</a> gedaan naar volumetric video
+                    Ik heb hierin niet alleen gekeken naar wat het nou precies was, hoe het werkt en de geschiedenis, maar ook hoe de technologie fundamenteel anders was dan motion capture 
+                    er word namelijk geen 'skeleten' gemaakt bij een volumetric video, maar een alembic waar per frame textures overheen worden gezet.
                     Daarna ben ik aan de slag gegaan met de eerste fase zoals die in mijn projectplan beschreven stond. Deze fase stond in het teken van pre productie. 
                     Ik had hiervoor de volgende deelvragen:<br><br>
                     <ul>
