--- a/index.html
+++ b/index.html
@@ -84,28 +84,31 @@
                 </p><br>
                 <b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televise?</b><br><br>
                 <h2>Fase 1</h2><br>
-                <p>Allereerst heb ik mezelf bekend gemaakt binnen Dutch Rose Media en de werknemers. Ik heb een rondleiding gehad
-                    in het gebouw en heb mezelf voorgesteld aan mijn collega's en mede stagiaires. Daarna ben ik aan de slag gegaan
-                    met het maken van mijn <a href="#">Projectplan</a>. De feedback hierop was dat ik gebruik moest maken van korte 
-                    sprints zodat ik feedback kon verwerken. <br>
-                    Ik wist voordat ik aan mijn stage begon eigenlijk vrijwel niets over het onderwerp dus heb ik allereerst veel <a href="#">onderzoek</a> gedaan naar volumetric video
-                    Ik heb hierin niet alleen gekeken naar wat het nou precies was, hoe het werkt en de geschiedenis, maar ook hoe de technologie fundamenteel anders was dan motion capture 
-                    er word namelijk geen 'skeleten' gemaakt bij een volumetric video, maar een alembic waar per frame textures overheen worden gezet.
-                    Daarna ben ik aan de slag gegaan met de eerste fase zoals die in mijn projectplan beschreven stond. Deze fase stond in het teken van pre productie. 
-                    Ik had hiervoor de volgende deelvragen:<br><br>
-                    <ul>
-                        <li>Welke 3D software zijn er om volumetric video te bewerken?</li>
-                        <li>Is FrameForge geschikt om 3D-scenes te storyboarden?</li>
-                    </ul><br>
-                    De eerste
-                    vraag bleek uiteindelijk irrelevant te zijn omdat 4DR Studios uitsluitend gebruik maakt van het programma 4D FX, dit is een programma
-                    waar de studio op draait en zal niet zo snel veranderd worden. De tweede vraag was echter wel erg interessant, ik ben hiervoor in <a href="#">contact</a>
-                    geweest met een regisseur van studio100 die het project gamekeepers onder zich had. Hij maakte gebruik van een programma genaamd shot designer, ik heb dit programma
-                    onderzocht en geconcludeerd dat dit voor een volumetric opname niet erg verhelderend is. En dan vooral de acteurs en het techniekteam. Ik heb ook nog verschillende andere
-                    programma's opgezocht en een aantal getest en ben tot de conclusie gekomen dat FrameForge het best geschikt is als storyboarding software voor gebruik in de volumetric 
-                    studio. Verder heb ik veel onderzoek gedaan naar wat volumetric video nou precies is en hoe het is ontstaan <a href="#">document</a>. Daarnaast heb ik de vraag gekregen 
-                    om te vergelijken waarom volumetric nou beter is als regulier CGI. Ik heb als test een storyboard gemaakt van een scene uit de matrix, waar ik rekening heb gehouden met 
-                    het voorgaanda onderzoek over hoe je moet storyboarden in het algemeen
+                <p>Om een beter beeld te krijgen van de expertise van mijn collega’s, heb ik diverse gesprekken met hen gevoerd. 
+                    Hierdoor had ik gelijk in het begin al een goed beeld van wie ik kon benaderen voor verschillende vragen over verschillende onderwerpen.
+                     Om de opdracht, de stakeholders en de planning goed in kaart te brengen heb ik een <a href="#">projectplan</a> gemaakt,
+                      de feedback hierop was dat ik binnen mijn fases gebruik moest maken van sprints zodat ik tussentijds mijn gemaakte werk kon valideren. 
+                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <a href="#">volumetric video</a>, 
+                      ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, en de technologie vergeleken met regulier CGI. 
+                      In grote lijnen kwam hieruit dat volumetric video kwalitatief nog niet kan tippen aan CGI maar, 
+                      dat het in productie tijd een verre voorsprong heeft op CGI. 
+                      Ik wilde weten hoe de bewerking van volumetric video in zijn werk ging, 
+                      dus heb ik een <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
+                      Om meer te weten te komen over <a href="#">storyboarden</a> heb ik bieb onderzoek gedaan naar verschillende technieken, 
+                      ook heb ik gekeken naar potentieel handige programma’s hiervoor en deze met elkaar vergeleken. 
+                      In dit onderzoek heb ik ook A/B testen toegepast, doordat ik met een aantal van deze programma’s heb gewerkt
+                       en deze op een aantal punten met elkaar heb <a href="#">vergeleken</a>. Ik heb voor dit onderzoek ook een <a href="#">expert</a> geraadpleegd
+                        namelijk: Gert Jan Booy (regisseur van Studio100) die vertelde mij dat hij weinig tijd heeft om daadwerkelijk 
+                        heel omslachtig te storyboarden, dus zijn grootste eis is dat het snel en makkelijk te leren is, 
+                        dit heb ik meegenomen in mijn uiteindelijke <a href="#">conclusie</a> van het onderzoek, 
+                        ook heeft hij mij verteld welk programma hij nu hiervoor heeft gebruikt dit programma heb ik ook onderzocht en 
+                        vergeleken met de andere. Om de programma’s zo goed mogelijk te begrijpen ben ik met een van de programma’s aan
+                         de slag gegaan met het maken van een <a href="#">test storyboard</a> van een bekende film scène (The Matrix).
+                          De feedback hierop was erg positief en de vervolg vragen vanuit Dutch Rose Media gingen voornamelijk over bepaalde 
+                          functies die het programma zou moeten bevatten. Daarnaast werd mij gevraagd of het mogelijk was om de volumetric studio 
+                          na te maken op <a href="#">schaal in FrameForge</a>, dit zou namelijk handig zijn omdat klanten vaak niet doorhebben hoe weinig opneembare 
+                          ruimte hebt in de studio, zo zou je in de toekomst kunnen voorkomen dat je voor verassingen komt te staan. 
+                          Ik heb alle onderzoeken ook nog gebundeld in één groot <a href="#">onderzoek document</a>.    
                 </p><br>
                 
             </div>
