--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                       Door middel van een bieb onderzoek ben ik meer te weten gekomen over <a href="#">volumetric video</a>, 
                       ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, en de technologie vergeleken met regulier CGI. 
                       In grote lijnen kwam hieruit dat volumetric video kwalitatief nog niet kan tippen aan CGI maar, 
-                      dat het in productie tijd een verre voorsprong heeft op CGI. 
+                      dat het in productie tijd een verre voorsprong heeft op CGI.<br><br>
                       Ik wilde weten hoe de bewerking van volumetric video in zijn werk ging, 
                       dus heb ik een <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
                       Om meer te weten te komen over <a href="#">storyboarden</a> heb ik bieb onderzoek gedaan naar verschillende technieken, 
@@ -102,15 +102,14 @@
                         heel omslachtig te storyboarden, dus zijn grootste eis is dat het snel en makkelijk te leren is, 
                         dit heb ik meegenomen in mijn uiteindelijke <a href="#">conclusie</a> van het onderzoek, 
                         ook heeft hij mij verteld welk programma hij nu hiervoor heeft gebruikt dit programma heb ik ook onderzocht en 
-                        vergeleken met de andere. Om de programma’s zo goed mogelijk te begrijpen ben ik met een van de programma’s aan
+                        vergeleken met de andere.<br><br> Om de programma’s zo goed mogelijk te begrijpen ben ik met een van de programma’s aan
                          de slag gegaan met het maken van een <a href="#">test storyboard</a> van een bekende film scène (The Matrix).
                           De feedback hierop was erg positief en de vervolg vragen vanuit Dutch Rose Media gingen voornamelijk over bepaalde 
                           functies die het programma zou moeten bevatten. Daarnaast werd mij gevraagd of het mogelijk was om de volumetric studio 
                           na te maken op <a href="#">schaal in FrameForge</a>, dit zou namelijk handig zijn omdat klanten vaak niet doorhebben hoe weinig opneembare 
                           ruimte hebt in de studio, zo zou je in de toekomst kunnen voorkomen dat je voor verassingen komt te staan. 
                           Ik heb alle onderzoeken ook nog gebundeld in één groot <a href="#">onderzoek document</a>.    
-                </p><br>
-                
+                </p><br>     
             </div>
         </div>
     </div>
@@ -148,8 +147,7 @@
         <div id="productensctn">
             <div class="container">
                 <h1>Producten</h1><br>
-                <h2>Learning goals</h2><br>
-                
+                <h2>Learning goals</h2><br>     
                 <p><b>Analise</b></p><br>
                  <a href="./watIsVolumetricVideo.html"><p>Wat is volumetric video?</p></a>
                  <a href="./waaromIsVolumetricBeter.html"><p>waarom is volumetric video beter dan regulier CGI?</p></a>
@@ -158,11 +156,9 @@
                  <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
                 <p>Opdracht omschrijving?</p>
                  <p>welke software is het meest geschikt om beelden te creeeren met volumetric video?</p><br>
-
                 <p><b>Advies</b></p><br>
                   <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
                  <a href="./conclusiePostproductie.html"><p>conclusie beste software post productie...</p></a><br>
-
                 <p><b>Design</b></p><br>
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
