--- a/index.html
+++ b/index.html
@@ -119,25 +119,38 @@
         <div id="faseTwee">
             <div class="container">
                 <h2>Fase 2</h2><br>
-                <p>Fase 2 stond eerst in het teken van game engines, ik wilde hiervoor Unity en Unreal engine vergelijken om te kijken welke het beste was.
-                    Ik ben allereerst aan de slag gegaan met Unity vooral omdat de werknemers bij Dutch Rose Media hier al veel ervaring mee hadden, in tegenstelling
-                    tot Unreal voor het geval dat ik vragen had. Tijdens het process ben ik samen met een aantal werknemers aan het einde van de eerste sprint van fase 2
-                    tot de conclusie gekomen dat game engine's niet de beste optie zijn in de scope 'film en tv'. Hierdoor ben ik overgestapt op 
-                    een ander 3D programma genaamd 'Blender'<br><br>
+                <p>
+                    Ik wilde meer weten over de post productie van volumetric video om deze hologrammen 
+                    in een andere omgeving te plaatsen, dus heb ik een <a href="./interviewGuy.html">interview</a> gehouden met Guy Meel 
+                    (Pluspuntproductie verantwoordelijk voor de skate scene van gamekeepers) hierin was uitgekomen dat hij gebruik maakte van Unreal Engine. 
+                    Hij vertelde mij dat Unreal niet gemakkelijk werkte met volumetric video, 
+                    omdat je in de viewport de volumetric alleen statisch kon bekijken, 
+                    dit was erg lastig met de bewegingen van de volumetric in sync met de beweging in de omgeving. <br><br>
 
-                    In sprint 2 wilde ik meer te weten komen van blender, dus ben ik aan de slag gegaan met het maken van een aantal projecten in Blender. Ik heb <a href="#">een donut</a> gemaakt in blender en heb hiermee veel basics geleerd van het programma zoals: Geometry Nodes, keybinding en 
-                    sculpting. Ik moest in overleg met Dutch Rose Media beginnen met <a href="#">een video</a> van een statisch object waar de camera omheen draaide, ook de vraag om een beweging te maken die normaal niet gedaan kan worden zoals: recht door een object heen.
-                    De vervolgstap hierbij werd om daadwerkelijk aan de slag te gaan met een volumetric video in Blender ook wel een alembic genaamd. Om de volumetric opname volledig in Blender te krijgen
-                    bleek ook niet gemakkelijk te zijn. Als je deze alembic importeerde naar Blender dan kreeg je een 3D model zonder kleur. Hiervoor moest je alle textures apart importeren en deze gelijk 
-                    laten lopen met de alembic. Toen ik deze alembic eenmaal volledig in Blender kreeg ben ik aan de slag gegaan met het maken van een pad die de camera zou volgen. Het bleek echter nodig 
-                    als je niet het volledige karakter de hele tijd in beeld wilde hebben dat je een zogenaamd 'empty' object over het karakter moest maken, zodat de camera dit lege object zou volgen in plaats van
-                    de alembic. Deze techniek geeft je een stuk meer controle over waar de camera precies naar kijkt. Uiteindelijk heb ik <a href="#">een video</a> gemaakt met de alembic waarin de camera eerst door de benen van 
-                    het personage vliegt en daarna een rondje met de personage mee draait waarna de camera langzaam uitzoomt. Ik heb me ook bezig gehouden met de vraag: Waarom is Volumetric video nou een goede keus 
-                    tegenover regulier CGI? daaruit kwamen twee belangrijke punten namelijk 'tijd' en 'moeilijke camera bewegingen'. Allereerst tijd, het is een enorm process bij motion capture om van de 
-                    opnames naar het eindproduct te gaan, want na de opnames heb je eigenlijk alleen nog maar een skelet waar je met de hand een personage overheen moet doen. Het proces van 
-                    skelet naar eindproduct kan in sommige gevallen wel 500 uur kosten. Bij volumetric video word de persoon in zijn/haar volledige hoedanigheid opgenomen, dus zowel de kleren als 
-                    de emoties van de acteur en de haren. Een ander groot voordeel van volumetric video is dat je achteraf volledige controle hebt over de positie en beweging van de 
-                    camera.
+                    Om meer te weten te komen over werken met een game engine ben ik begonnen aan een project in Unity. 
+                    Ik heb gekozen voor unity, omdat ik in het begin van fase 1 heb vernomen dat de expertise van de werknemers bij Unity ligt. 
+                    Zo kan ik makkelijk bij iemand terecht voor vragen. Om meer te weten te komen over hoe Unity werkt heb ik een <a href="./unityBospad.html">berg omgeving</a> gemaakt, 
+                    met bomen en gras. Ik heb hierdoor geleerd hoe je assets moet toevoegen op Unity, deze importeren en vervolgens te gebruiken. 
+                    Om meer te weten te komen over animeren in Unity heb ik een <a href="./ironManScene.html">video</a> gemaakt waarin een figuur in de lucht vliegt en vervolgens wegduikt voor straaljagers 
+                    (inspiratie van Iron Man, 2008) hierin heb ik geleerd om met een timeline en keyframes te werken ook heb ik geleerd hoe je de skybox aan kunt passen 
+                    (lucht omgeving veranderd naar omgeving met wolken). Het exporteren van deze video bleek echter vrij ingewikkeld, omdat de timeline meer bedoelt is voor een ‘cutscene’ tussen gameplay door.<br><br>
+                    
+                    In sprint 2 ben ik na een interview overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
+                    Ik wilde meer weten over dit programma dus heb ik <a href="#">bieb onderzoek</a> gedaan naar Blender. 
+                    Om meer ‘hands on’ kennis te vergaren over Blender heb ik <a href="#">een donut</a> gemaakt in blender, 
+                    hiermee heb ik de basics geleerd zoals: vertices (punten in 3D objecten waar hoeken of lijnen samen komen), 
+                    keybindings en geometry nodes.<br><br> 
+                    
+                    Om meer te weten te komen over camera animaties in Blender heb ik een <a href="./blenderKubus.html">POC</a> gemaakt met een camera track,
+                    ik heb hierbij een beweging gemaakt die normaliter niet makkelijk te filmen is. Ik de camera recht door het object laten vliegen.
+                    <a href="./blenderanimatie.html">De volgende iteratie</a> wilde ik in plaats van een statisch object gebruik gemaakt van een volumetric video, 
+                    ik hier geleerd om de camera op verschillende punten in de animatie te laten focussen door een empty object in de scene toe 
+                    te voegen die de camera volgt. De feedback hierop was dat de camera nog niet heel vloeiend over kwam. 
+                    Verder was het volgens Dutch Rose Media een gaaf idee om de camera aan het begin tussen de benen door te laten gaan, 
+                    in relatie met de rigoureuze camera bewegingen die mogelijk zijn met Blender in tegenstelling tot gewoon filmen op 
+                    bijvoorbeeld rails. Om deze feedback te verwerken ben ik aan de slag gegaan met een <a href="#">nieuwe iteratie</a> met een andere volumetric video,
+                    ik heb in deze video gedurende de hele beweging de focus volledig op de voorkant van de persoon. 
+                    De camera draait dus mee op hoe snel de personage draait.
                 </p>
             </div>
         </div>
@@ -163,7 +176,7 @@
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
                  <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
-                 <a href="blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a><br>
+                 <a href="./blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a><br>
 
                 <p><b>Realisatie</b></p><br>
 
