--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                     (inspiratie van Iron Man, 2008) hierin heb ik geleerd om met een timeline en keyframes te werken ook heb ik geleerd hoe je de skybox aan kunt passen 
                     (lucht omgeving veranderd naar omgeving met wolken). Het exporteren van deze video bleek echter vrij ingewikkeld, omdat de timeline meer bedoelt is voor een ‘cutscene’ tussen gameplay door.<br><br>
                     
+                    <b>Conclusie sprint 1:</b><p>Na uitgebreid onderzoek ben ik tot de conclusie gekomen dat game engines niet geschikt zijn in de scope film en televisie, in de volgende sprint ga ik naar opties kijken buiten het gebied game engines.</p>
+
                     In sprint 2 ben ik na een <a href="#">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
                     Ik wilde meer weten over dit programma dus heb ik <a href="#">bieb onderzoek</a> gedaan naar Blender. 
                     Om meer ‘hands on’ kennis te vergaren over Blender heb ik <a href="#">een donut</a> gemaakt in blender, 
