--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h2>Fase 2</h2><br>
                 <p>
                     Ik wilde meer weten over de post productie van volumetric video om deze hologrammen 
-                    in een andere omgeving te plaatsen, dus heb ik een <a href="./interviewGuy.html">interview</a> gehouden met Guy Meel 
+                    in een andere omgeving te plaatsen, dus heb ik een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="./interviewGuy.html">interview</a> gehouden met Guy Meel 
                     (Pluspuntproductie verantwoordelijk voor de skate scene van gamekeepers) hierin was uitgekomen dat hij gebruik maakte van Unreal Engine. 
                     Hij vertelde mij dat Unreal niet gemakkelijk werkte met volumetric video, 
                     omdat je in de viewport de volumetric alleen statisch kon bekijken, 
@@ -137,23 +137,27 @@
                     
                     <b>Conclusie sprint 1:</b><p>Na uitgebreid onderzoek ben ik tot de conclusie gekomen dat game engines niet geschikt zijn in de scope film en televisie, in de volgende sprint ga ik naar opties kijken buiten het gebied game engines.</p><br><br>
 
-                    In sprint 2 ben ik na een <a href="#">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
-                    Ik wilde meer weten over dit programma dus heb ik <a href="#">bieb onderzoek</a> gedaan naar Blender. 
+                    In sprint 2 ben ik na een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
+                    Ik wilde meer weten over dit programma dus heb ik <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">literature study</a> gedaan naar Blender. 
                     Om meer ‘hands on’ kennis te vergaren over Blender heb ik <a href="#">een donut</a> gemaakt in blender, 
                     hiermee heb ik de basics geleerd zoals: vertices (punten in 3D objecten waar hoeken of lijnen samen komen), 
                     keybindings en geometry nodes.<br><br> 
                     
-                    Om meer te weten te komen over camera animaties in Blender heb ik een <a href="./blenderKubus.html">POC</a> gemaakt met een camera track,
+                    Om meer te weten te komen over camera animaties in Blender heb ik een <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> <a href="./blenderKubus.html">POC</a> gemaakt met een camera track,
                     ik heb hierbij een beweging gemaakt die normaliter niet makkelijk te filmen is. Ik de camera recht door het object laten vliegen.
-                    <a href="./blenderanimatie.html">De volgende iteratie</a> wilde ik in plaats van een statisch object gebruik gemaakt van een volumetric video, 
+                    <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> <a href="./blenderanimatie.html">De volgende iteratie</a> wilde ik in plaats van een statisch object gebruik gemaakt van een volumetric video, 
                     ik hier geleerd om de camera op verschillende punten in de animatie te laten focussen door een empty object in de scene toe 
                     te voegen die de camera volgt. De feedback hierop was dat de camera nog niet heel vloeiend over kwam. 
                     Verder was het volgens Dutch Rose Media een gaaf idee om de camera aan het begin tussen de benen door te laten gaan, 
                     in relatie met de rigoureuze camera bewegingen die mogelijk zijn met Blender in tegenstelling tot gewoon filmen op 
                     bijvoorbeeld rails. Om deze feedback te verwerken ben ik aan de slag gegaan met een <a href="#">nieuwe iteratie</a> met een andere volumetric video,
                     ik heb in deze video gedurende de hele beweging de focus volledig op de voorkant van de persoon. 
-                    De camera draait dus mee op hoe snel de personage draait.
+                    De camera draait dus mee op hoe snel de personage draait.<br><br>
                 </p>
+                <p><b>Conclusie sprint 2:</b>Blender is uitermate geschikt voor de post productie van volumetric video, 
+                het programma beschikt over een uitgebreide toolset waar je vrijwel alles kunt maken wat je kunt bedenken
+            de toevoeging van geometry nodes zorgt voor nog meer creatieve vrijheid zoals automatisch sprinkels op een donut plaatsen
+        of op een dansvloer de tegels licht laten geven.</p>
             </div>
         </div>
     </section>
