--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
                     Hierdoor had ik gelijk in het begin al een goed beeld van wie ik kon benaderen voor verschillende vragen over verschillende onderwerpen.
                      Om de opdracht, de stakeholders en de planning goed in kaart te brengen heb ik een <a href="#">projectplan</a> gemaakt,
                       de feedback hierop was dat ik binnen mijn fases gebruik moest maken van sprints zodat ik tussentijds mijn gemaakte werk kon valideren. 
-                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <a href="#">volumetric video</a>, 
-                      ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, en de technologie vergeleken met regulier CGI. 
+                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">volumetric video</a>, 
+                      ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> en de technologie vergeleken met regulier CGI. 
                       In grote lijnen kwam hieruit dat volumetric video kwalitatief nog niet kan tippen aan CGI maar, 
                       dat het in productie tijd een verre voorsprong heeft op CGI.<br><br>
                       Ik wilde weten hoe de bewerking van volumetric video in zijn werk ging, 
-                      dus heb ik een <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
-                      Om meer te weten te komen over <a href="#">storyboarden</a> heb ik bieb onderzoek gedaan naar verschillende technieken, 
+                      dus heb ik een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
+                      Om meer te weten te komen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">storyboarden</a> heb ik bieb onderzoek gedaan naar verschillende technieken, 
                       ook heb ik gekeken naar potentieel handige programma’s hiervoor en deze met elkaar vergeleken. 
                       In dit onderzoek heb ik ook A/B testen toegepast, doordat ik met een aantal van deze programma’s heb gewerkt
-                       en deze op een aantal punten met elkaar heb <a href="#">vergeleken</a>. Ik heb voor dit onderzoek ook een <a href="#">expert</a> geraadpleegd
+                       en deze op een aantal punten met elkaar heb <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">vergeleken</a>. Ik heb voor dit onderzoek ook een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">expert</a> geraadpleegd
                         namelijk: Gert Jan Booy (regisseur van Studio100) die vertelde mij dat hij weinig tijd heeft om daadwerkelijk 
                         heel omslachtig te storyboarden, dus zijn grootste eis is dat het snel en makkelijk te leren is, 
                         dit heb ik meegenomen in mijn uiteindelijke <a href="#">conclusie</a> van het onderzoek, 
@@ -108,7 +108,7 @@
                           functies die het programma zou moeten bevatten. Daarnaast werd mij gevraagd of het mogelijk was om de volumetric studio 
                           na te maken op <a href="#">schaal in FrameForge</a>, dit zou namelijk handig zijn omdat klanten vaak niet doorhebben hoe weinig opneembare 
                           ruimte hebt in de studio, zo zou je in de toekomst kunnen voorkomen dat je voor verassingen komt te staan. 
-                          Ik heb alle onderzoeken ook nog gebundeld in één groot <a href="#">onderzoek document</a>.    
+                          Ik heb alle onderzoeken ook nog gebundeld in één groot <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">onderzoek document</a>.    
                 </p><br>     
             </div>
         </div>
@@ -143,9 +143,9 @@
                     hiermee heb ik de basics geleerd zoals: vertices (punten in 3D objecten waar hoeken of lijnen samen komen), 
                     keybindings en geometry nodes.<br><br> 
                     
-                    Om meer te weten te komen over camera animaties in Blender heb ik een <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> <a href="./blenderKubus.html">POC</a> gemaakt met een camera track,
+                    Om meer te weten te komen over camera animaties in Blender heb ik een <a href="./blenderKubus.html">POC</a> gemaakt met een camera track,
                     ik heb hierbij een beweging gemaakt die normaliter niet makkelijk te filmen is. Ik de camera recht door het object laten vliegen.
-                    <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> <a href="./blenderanimatie.html">De volgende iteratie</a> wilde ik in plaats van een statisch object gebruik gemaakt van een volumetric video, 
+                    <a href="./blenderanimatie.html">De volgende iteratie</a> wilde ik in plaats van een statisch object gebruik gemaakt van een volumetric video, 
                     ik hier geleerd om de camera op verschillende punten in de animatie te laten focussen door een empty object in de scene toe 
                     te voegen die de camera volgt. De feedback hierop was dat de camera nog niet heel vloeiend over kwam. 
                     Verder was het volgens Dutch Rose Media een gaaf idee om de camera aan het begin tussen de benen door te laten gaan, 
