--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2>Fase 1</h2><br>
                 <p>Om een beter beeld te krijgen van de expertise van mijn collega’s, heb ik diverse gesprekken met hen gevoerd. 
                     Hierdoor had ik gelijk in het begin al een goed beeld van wie ik kon benaderen voor verschillende vragen over verschillende onderwerpen.
-                     Om de opdracht, de stakeholders en de planning goed in kaart te brengen heb ik een <a href="#">projectplan</a> gemaakt,
+                     Om de opdracht, de stakeholders en de planning goed in kaart te brengen heb ik een <a href="./projectplan.html">projectplan</a> gemaakt,
                       de feedback hierop was dat ik binnen mijn fases gebruik moest maken van sprints zodat ik tussentijds mijn gemaakte werk kon valideren. 
                       Door middel van een bieb onderzoek ben ik meer te weten gekomen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">volumetric video</a>, 
                       ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> en de technologie vergeleken met regulier CGI. 
