--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     Hierdoor had ik gelijk in het begin al een goed beeld van wie ik kon benaderen voor verschillende vragen over verschillende onderwerpen.
                      Om de opdracht, de stakeholders en de planning goed in kaart te brengen heb ik een <a href="./projectplan.html">projectplan</a> gemaakt,
                       de feedback hierop was dat ik binnen mijn fases gebruik moest maken van sprints zodat ik tussentijds mijn gemaakte werk kon valideren. 
-                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">volumetric video</a>, 
+                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="./watIsVolumetricVideo.html">volumetric video</a>, 
                       ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> en de technologie vergeleken met regulier CGI. 
                       In grote lijnen kwam hieruit dat volumetric video kwalitatief nog niet kan tippen aan CGI maar, 
                       dat het in productie tijd een verre voorsprong heeft op CGI.<br><br>
